2005-09-19  Derek Price  <derek@ximbiot.com>

	* __fpending.c, __fpending.h, atexit.c, basename.c, chdir-long.c,
	closeout.c, cycle-check.c, dirname.c, dup-safer.c, dup2.c, exitfail.c,
	fd-safer.c, filenamecat.c, fnmatch.c, ftruncate.c, getaddrinfo.c,
	getcwd.c, getdate.h, getdelim.c, getline.c, getlogin_r.c, getndelim2.c,
	getnline.c, getopt1.c, getpass.c, gettimeofday.c, lstat.c, malloc.c,
	memmove.c, mkdir.c, mkstemp.c, nanosleep.c, openat.c, pipe-safer.c,
	quotearg.c, readlink.c, realloc.c, regex.c, rename.c, rpmatch.c,
	save-cwd.c, strerror.c, stripslash.c, strncasecmp.c, strnlen1.c,
	strstr.c, strtol.c, tempname.c, time_r.c, timespec.h, xalloc-die.c,
	xgetcwd.c, xmalloc.c, xreadlink.c, yesno.c: Update from GNULIB.

	* canon-host.h, md5.c, md5.h, mktime.c, timespec.h: Update from GNULIB.

2005-09-15  Derek Price  <derek@ximbiot.com>

	* regcomp.c, regex_internal.c, regex_internal.h, regexec.c: Update from
	GNULIB, again.

	* regcomp.c, regex_internal.c, regex_internal.h, regexec.c: Update from
	GNULIB.

	* strstr.h: Update from GNULIB.

2005-09-13  Derek Price  <derek@ximbiot.com>

	* canon-host.c: Update from GNULIB.

2005-09-12  Derek Price  <derek@ximbiot.com>

	* gai_strerror.c: Include config.h when available.  Include
	getaddrinfo.h before other headers to test interface.

2005-09-10  Larry Jones  <lawrence.jones@ugs.com>

	* canon-host.c (canon_host_r): Designated initializers are C99 only.
	* getaddrinfo.c (getaddrinfo): Can't do arithmetic on void *.  Fix
	incorrect hints member name.  Fix const mismatch.

2005-09-09  Derek Price  <derek@ximbiot.com>

	Install glibc porting changes.
	* glob.c, glob_.h: Update with alpha-GNULIB.
	* glob-libc.h: New file from same.

2005-09-08  Derek Price  <derek@ximbiot.com>

	* getaddrinfo.h: Don't assume HAVE_GETADDRINFO will be defined when the
	system does not haev getaddrinfo.

2005-09-06  Derek Price  <derek@ximbiot.com>

	* regex_internal.h: Update from GNULIB.
